# HIP-FFT-convolution

./: .gitignore  CMakeLists.txt  README.md  compile_nvidia.sh
benchmark/: CMakeLists.txt  README.md  benchmark_fft.cxx
examples/: CMakeLists.txt  README.md  example_1.cxx
include/: README.md  fft_convolution.h  naive_convolution_1d.h  naive_convolution_2d.h  run_fft_convolution.h
src/: CMakeLists.txt  README.md  conv_layer.hip  fft_convolution.hip  fft_utils.hip  naive_convolution.hip  naive_convolution_1d.hip  naive_convolution_2d.hip
test/: CMakeLists.txt  README.md  test_fft.cxx  test_hip.cxx
